Commented old unused versions of some functions.
Web page now shows session_id, so far for debugging purposes

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </head>
     <body>
+    <div>session_id: {{session}}</div>
     <form method="POST" action="/" enctype="multipart/form-data" style="height: 95vh; margin-bottom: 20px;">
         <div class="row" style="height: 65%; margin-bottom: 20px;">
             <div class="col-6" style="display: flex; flex-direction: column;">
