Now shows globals in log as well

--- a/templates/index.html
+++ b/templates/index.html
@@ -518,6 +518,7 @@
 
                             console.log("Inputs JSON:", inputs);
                             console.log("Plant inputs JSON:", plant_inputs);
+                            console.log("Globals JSON:", global_inputs);
 
                             // Form data payload
                             let formData = new FormData();
