--- a/static/style.css
+++ b/static/style.css
@@ -8,11 +8,15 @@ h2 {
     text-align:center;
 }
 
-textarea{
-    resize: none; 
-    width: 100%;
-    height: 100%;
-    white-space: pre;
+textarea {
+  width: 100%;
+  height: 100%;
+  padding: 8px 4px;
+  resize: none;
+  overflow: auto;
+  border: none;
+  font-family: inherit;
+  outline: none;
 }
 
 button{
@@ -33,4 +37,23 @@ form {
     padding-bottom: 10px;
     margin-right: 0px;
     margin-left: 0px;
+}
+
+.editor-container {
+  display: flex;
+  font-family: monospace;
+  height: 100%;
+  border: 1px solid #ccc;
+  overflow: hidden;
+}
+
+.line-numbers {
+  background-color: #f0f0f0;
+  color: #555;
+  padding: 8px 4px;
+  text-align: right;
+  user-select: none;
+  white-space: pre;
+  border-right: 1px solid #ccc;
+  overflow: hidden;
 }
